Document debugger-bury-or-kill
* doc/lispref/debugging.texi (Using Debugger): Mention debugger-bury-or-kill.

* lisp/emacs-lisp/debug.el (debugger-bury-or-kill): Doc tweak.

* etc/NEWS: Related edit.

--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,6 +1,7 @@
 2012-11-11  Glenn Morris  <rgm@gnu.org>
 
 	* debugging.texi (Error Debugging): Mention debug-on-message.
+	(Using Debugger): Mention debugger-bury-or-kill.
 
 	* control.texi (Signaling Errors):
 	* debugging.texi (Error Debugging):
