--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,5 +1,8 @@
 2012-11-11  Glenn Morris  <rgm@gnu.org>
 
+	* ibuffer.el (ibuffer-mode-map, ibuffer-mode):
+	Add ibuffer-filter-by-derived-mode.
+
 	* ibuffer.el (ibuffer-mode-map): Don't have two menu items with
 	the same name shadowing each other.
 
