--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2012-11-11  Juanma Barranquero  <lekktu@gmail.com>
+
+	* xdisp.c (start_hourglass) [HAVE_NTGUI]: Add block to silence
+	warning about mixing declarations and code in ISO C90.
+
 2012-11-10  Martin Rudalics  <rudalics@gmx.at>
 
 	* window.c (Fsplit_window_internal): Set combination limit of
