--- a/test/ChangeLog
+++ b/test/ChangeLog
@@ -1,3 +1,8 @@
+2012-11-13  Dmitry Gutov  <dgutov@yandex.ru>
+
+	* automated/ruby-mode-tests.el (ruby-heredoc-font-lock)
+	(ruby-singleton-class-no-heredoc-font-lock): New tests.
+
 2012-11-12  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* automated/advice-tests.el: New tests.
