Use new names for hooks rather than obsolete aliases
* lisp/cedet/semantic/lex-spp.el (semantic-lex-spp-lex-text-string):
* lisp/cedet/semantic/util.el (semantic-describe-buffer):
* lisp/cedet/semantic/bovine/c.el (semantic-c-parse-lexical-token)
(semantic-default-c-setup):
* lisp/emacs-lisp/eieio-datadebug.el (eieio-debug-methodinvoke):
* lisp/gnus/gnus-diary.el (nndiary-request-create-group-functions)
(nndiary-request-update-info-functions)
(gnus-subscribe-newsgroup-functions)
(nndiary-request-accept-article-functions):
* lisp/net/tramp-gvfs.el (tramp-gvfs-dbus-event-error):
Use new names for hooks rather than obsolete aliases.

* lisp/arc-mode.el:
* lisp/emacs-lisp/checkdoc.el: Related comments.

* etc/NEWS: Related markup.

--- a/lisp/cedet/ChangeLog
+++ b/lisp/cedet/ChangeLog
@@ -1,3 +1,11 @@
+2012-11-13  Glenn Morris  <rgm@gnu.org>
+
+	* semantic/lex-spp.el (semantic-lex-spp-lex-text-string):
+	* semantic/util.el (semantic-describe-buffer):
+	* semantic/bovine/c.el (semantic-c-parse-lexical-token)
+	(semantic-default-c-setup):
+	Use new names for hooks rather than obsolete aliases.
+
 2012-11-12  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* semantic/mru-bookmark.el (semantic-mru-bookmark-mode):
