--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,9 @@
+2012-11-13  Glenn Morris  <rgm@gnu.org>
+
+	* emacs-lisp/eieio-datadebug.el (eieio-debug-methodinvoke):
+	* net/tramp-gvfs.el (tramp-gvfs-dbus-event-error):
+	Use new names for hooks rather than obsolete aliases.
+
 2012-11-12  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* emacs-lisp/gv.el (gv-define-simple-setter): One more fix (bug#12871).
