--- a/doc/misc/ChangeLog
+++ b/doc/misc/ChangeLog
@@ -1,3 +1,8 @@
+2012-11-13  Glenn Morris  <rgm@gnu.org>
+
+	* erc.texi (Modules): Undocument obsolete "hecomplete".
+	Add "notifications".
+
 2012-11-12  Glenn Morris  <rgm@gnu.org>
 
 	* flymake.texi (Customizable variables)
