--- a/etc/NEWS
+++ b/etc/NEWS
@@ -438,8 +438,11 @@ The global binding for `M-=', `count-words-region' is in effect.
 *** New module "notifications", which can send a notification when you
 receive a private message or your nickname is mentioned.
 
++++
 *** ERC will look up server/channel names via auth-source and use any
 channel keys found.
+
+*** FIXME erc-lurker-hide-list
 
 +++
 ** Flymake uses fringe bitmaps to indicate errors and warnings.
