Document erc-lurker-hide-list
* doc/misc/erc.texi (Options): Make a start by adding erc-hide-list,
erc-lurker-hide-list.

* etc/NEWS: Related edit.

--- a/doc/misc/ChangeLog
+++ b/doc/misc/ChangeLog
@@ -3,6 +3,7 @@
 	* erc.texi (Modules): Undocument obsolete "hecomplete".
 	Add "notifications".
 	(Connecting): Add brief section on passwords.
+	(Options): Make a start by adding erc-hide-list, erc-lurker-hide-list.
 
 2012-11-12  Glenn Morris  <rgm@gnu.org>
 
