--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,9 @@
+2012-11-13  Dmitry Gutov  <dgutov@yandex.ru>
+
+	* progmodes/ruby-mode.el (ruby-add-log-current-method): Print the
+	period before class method names, not after.  Remove handling of
+	one impossible case.  Add comments.
+
 2012-11-13  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* emacs-lisp/advice.el: Remove support for freezing.
