--- a/test/ChangeLog
+++ b/test/ChangeLog
@@ -1,7 +1,9 @@
 2012-11-13  Dmitry Gutov  <dgutov@yandex.ru>
 
 	* automated/ruby-mode-tests.el (ruby-heredoc-font-lock)
-	(ruby-singleton-class-no-heredoc-font-lock): New tests.
+	(ruby-singleton-class-no-heredoc-font-lock)
+	(ruby-add-log-current-method-examples): New tests.
+	(ruby-test-string): Extract from ruby-should-indent-buffer.
 
 2012-11-12  Stefan Monnier  <monnier@iro.umontreal.ca>
 
