--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -4,7 +4,7 @@
 	* dispnew.c (glyphs_initialized_initially_p): Remove.
 	(adjust_frame_glyphs_initially): Likewise.  Adjust users.
 	(Fredraw_frame): Move actual code from here...
-	(redraw_here): ...to here.  Add eassert.  Adjust comment.
+	(redraw_frame): ...to here.  Add eassert.  Adjust comment.
 	(Fredraw_display): Use redraw_frame.
 	* xdisp.c (clear_garbaged_frames): Likewise.
 
