--- a/etc/NEWS
+++ b/etc/NEWS
@@ -43,7 +43,8 @@ It is layered as:
 
 * Incompatible Lisp Changes in Emacs 24.4
 
-** `defadvice' does not honor the `freeze' flag any more.
+** `defadvice' does not honor the `freeze' flag and cannot advise
+special-forms any more.
 
 ** `dolist' in lexical-binding mode does not bind VAR in RESULT any more.
 VAR was bound to nil which was not tremendously useful and just lead to
