--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,5 +1,8 @@
 2012-11-13  Stefan Monnier  <monnier@iro.umontreal.ca>
 
+	* woman.el (woman-file-name): Don't mess with unread-command-events
+	(bug#12861).
+
 	* emacs-lisp/advice.el: Layer on top of nadvice.el.
 	Remove out of date self-require hack.
 	(ad-do-advised-functions): Use simple `dolist'.
@@ -7,9 +10,9 @@
 	(ad-advice-definition): Redefine as functions.
 	(ad-advice-classes): Move before first use.
 	(ad-make-origname, ad-set-orig-definition, ad-clear-orig-definition)
-	(ad-make-mapped-call, ad-make-advised-docstring, ad-make-plain-docstring)
+	(ad-make-mapped-call, ad-make-advised-docstring,ad-make-plain-docstring)
 	(ad--defalias-fset): Remove functions.
-	(ad-make-advicefunname, ad-clear-advicefunname-definition): New functions.
+	(ad-make-advicefunname, ad-clear-advicefunname-definition): New funs.
 	(ad-get-orig-definition): Rewrite.
 	(ad-make-advised-definition-docstring): Change base docstring.
 	(ad-real-orig-definition): Rewrite.
@@ -17,7 +20,7 @@
 	(ad--make-advised-docstring): Redirect `function' from ad-Advice-...
 	(ad-make-advised-definition): Simplify.
 	(ad-assemble-advised-definition): Tweak for new calling context.
-	(ad-activate-advised-definition): Setup ad-Advice-* instead of ad-Orig-*.
+	(ad-activate-advised-definition): Setup ad-Advice-* i.s.o ad-Orig-*.
 	(ad--defalias-fset): Rename from ad-handle-definition.  Make it set the
 	function and call ad-activate if needed.
 	(ad-activate, ad-deactivate): Don't call ad-handle-definition any more.
